[tool.poetry]
description = "Simple, Elegant LLM Chat Inference"
version = "0.6.5"
name = "src"
authors = ["PotatoOff", "NotCookey"]
readme = "README.md"
license = "BSD 3-Clause"
repository = "https://github.com/Potatooff/Le-Potato"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
urllib3 = "^2.2.1"
trafilatura = "^1.8.1"
flask = "^3.0.3"
pyyaml = "^6.0.1"
pypdf2 = "^3.0.1"
requests = "^2.31.0"
llama-index = "^0.10.29"
llama-index-llms-openrouter = "^0.1.4"
llama-index-llms-openai-like = "^0.1.3"
llama-index-llms-llama-cpp = "^0.1.3"
torch = "^2.2.2"
llama-index-vector-stores-faiss = "^0.1.2"
llama-index-embeddings-huggingface = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
