[tool.poetry]
name = "src"
version = "0.8.5"
description = "Simple. Elegant. LLM Chat Inference."
authors = ["PotatoOff & Contributors <3>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pyyaml = "^6.0.1"
openai = "^1.23.2"
llama-index = "^0.10.30"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-vector-stores-faiss = "^0.1.2"
faiss-cpu = "^1.8.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
